--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ejemplo git</title>
     <script src="./js/acrch1.js"></script>
-    
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <center><h1>Hola de nuevo bro</h1></center>
 </body>
 </html>
